@@ -148,6 +148,8 @@ Para samples no vale. Además en pc speaker implicaría lanzar ese sonido median
 
 -tbblue bit invertir orden sprites
 
+-snapshot ZSF de nextdows, no guarda la parte inferior de pantalla aparentemente
+
 -Para ZENG con más de 2 pcs:
 *1 solo master que pueda enviar snapshots a más de 1 slave. Fácil
 *ZRCP que permita más de 1 conexión a la vez, para recibir los eventos de envíos de teclas de los slaves. Aquí por una parte hay que tener semáforos (o no?) al actuar sobre según que partes de ZEsarUX y además lanzar threads aparte ( o fork? ) por cada conexión nueva de cliente ZRCP
